--- a/nextjs-chakraui/package.json
+++ b/nextjs-chakraui/package.json
@@ -13,10 +13,17 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.7",
+    "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@types/redux-logger": "^3.0.12",
+    "axios": "^1.6.2",
+    "framer-motion": "^10.16.12",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.0.1",
+    "redux": "^5.0.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
